force-app/main/default/objects/subscription_details__dlm/fields/coverage_condition__c.field-meta.xml
<CustomField>
    <fullName>coverage_condition__c</fullName>
    <label>coverage_condition</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>coverage_condition</labelOverride>
        <masterLabel>coverage_condition</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>