force-app/main/default/objects/subscription_details__dlm/fields/coverage_deduction__c.field-meta.xml
<CustomField>
    <fullName>coverage_deduction__c</fullName>
    <label>coverage_deduction</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>coverage_deduction</labelOverride>
        <masterLabel>coverage_deduction</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>