force-app/main/default/objects/subscription_details__dlm/fields/covered_risk__c.field-meta.xml
<CustomField>
    <fullName>covered_risk__c</fullName>
    <label>covered_risk</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>covered_risk</labelOverride>
        <masterLabel>covered_risk</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>