force-app/main/default/objects/subscription_details__dlm/fields/industry__c.field-meta.xml
<CustomField>
    <fullName>industry__c</fullName>
    <label>industry</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>industry</labelOverride>
        <masterLabel>industry</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>