force-app/main/default/objects/subscription_details__dlm/fields/location_details__c.field-meta.xml
<CustomField>
    <fullName>location_details__c</fullName>
    <label>location_details</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>location_details</labelOverride>
        <masterLabel>location_details</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>