force-app/main/default/objects/subscription_details__dlm/fields/object__c.field-meta.xml
<CustomField>
    <fullName>object__c</fullName>
    <label>object</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>object</labelOverride>
        <masterLabel>object</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>