force-app/main/default/objects/subscription_details__dlm/fields/ProcessId__c.field-meta.xml
<CustomField>
    <fullName>ProcessId__c</fullName>
    <label>Process Id</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>Process Id</labelOverride>
        <masterLabel>Process Id</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>