force-app/main/default/objects/subscription_details__dlm/fields/rel_1767851826161_end__c.field-meta.xml
<CustomField>
    <fullName>rel_1767851826161_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>subscription_details_SourceRecordId__rel</label>
    <referenceTo>TestDataLakeObj_0108__dlm</referenceTo>
    <relationshipLabel>subscription_details_SourceRecordId__rel</relationshipLabel>
    <relationshipName>rel_1767851826161_end</relationshipName>
    <type>Lookup</type>
</CustomField>