force-app/main/default/objects/subscription_details__dlm/fields/unit__c.field-meta.xml
<CustomField>
    <fullName>unit__c</fullName>
    <label>unit</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <labelOverride>unit</labelOverride>
        <masterLabel>unit</masterLabel>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>